# pico-freertos

./: .gitmodules  CMakeLists.txt  README.md
coreATC/: atc.h
include/: core_mqtt_config.h
src/: at_task.c  at_task.h  main.c  mqtt_task.c  mqtt_task.h  uart_rcv_task.c  uart_rcv_task.h
